(Hopefully) fix invisible scrollbars on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,6 @@ html, body {
   margin: 0;
   height: 100%;
   background: black;
-  overflow: auto;
-  /* Re-enable inertia scrolling */
-  -webkit-overflow-scrolling: touch;
 }
 
 #introCanvas {
